add_library( opgen-supg_shear_heating

   P2ElementwiseSupgShearHeatingP1ViscosityScaled.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaled.hpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap.hpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta.hpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap.hpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap.hpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap.hpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap.hpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap.hpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap.hpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap.cpp
   P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap.hpp
)
target_link_libraries( opgen-supg_shear_heating PRIVATE hyteg )

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-supg_shear_heating PRIVATE

      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaled_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaled_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_3D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_2D.cpp
      avx/P2ElementwiseSupgShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-supg_shear_heating PRIVATE

      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledCoeffDelta_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaAnnulusMap_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceCoeffDeltaIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaledNoSurfaceIcosahedralShellMap_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaled_applyScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaled_computeInverseDiagonalOperatorValuesScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_3D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaled_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_2D.cpp
      noarch/P2ElementwiseSupgShearHeatingP1ViscosityScaled_toMatrixScaled_P2ElementwiseSupgShearHeatingP1ViscosityScaled_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-supg_shear_heating PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-supg_shear_heating PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-supg_shear_heating PUBLIC cxx_std_17)
endif ()
